# base64

./: .gitignore  CMakeLists.txt
include/: base64.h
src/: base64.c
test/: main.c
